--- a/Diary/src/styles.scss
+++ b/Diary/src/styles.scss
@@ -1,1 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+  --color-text-primary: #202020;
+  --color-text-secondary: #858484;
+  --color-border: #f4f4f4;
+  --color-box-shadow-grid: #ffdcdc;
+  --color-background-component: #ECECEC;
+  --color-background-container: #FFFFFF;
+  --color-background-gradient: linear-gradient(180deg, #7dffff 0%, #aae1fc 55%, #f6d0ff 100%);
+  --border-radius: 5px;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+li,
+ol {
+  list-style: none;
+}
+
+htm,
+body {
+  font-family: "Montserrat", sans-serif;
+
+  display: block;
+
+  height: 100vh;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
